apps/demo-3/demo-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-3
  namespace: demo-3
  labels:
    app: demo-3
spec:
  selector:
    app: demo-3
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
