apps/demo-3/demo-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-3
  labels:
    app: demo-3
  namespace: demo-3
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - demo-3.k8s.integratn.tech
    secretName: demo-3-tls
  rules:
  - host: demo-3.k8s.integratn.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-3
            port: 
              name: http
